FEAT : 포트폴리오 CRUD (임시)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=BE
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# H2 Database Configuration
+
+spring.datasource.url=jdbc:h2:file:~/testdb7777
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 # JPA configuration
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,6 +20,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # DB Reset configuration (DANGER)
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 
