FEAT: 네이버 뉴스 API, 앨런 AI API, KRX API 연결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # include application-local.properties configuration
 spring.profiles.include=local
+
+# Import .env file
+spring.config.import=optional:file:.env[.properties]
+
+# Api Key
+naver.client.id=${NAVER_API_ID}
+naver.client.secret=${NAVER_API_SECRET}
+allen.client.id=${ALLEN_API_ID}
+krx.client.id=${KRX_API_ID}
