--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+
 # JPA configuration
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
