--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ naver.client.id=${NAVER_API_ID}
 naver.client.secret=${NAVER_API_SECRET}
 allen.client.id=${ALLEN_API_ID}
 krx.client.id=${KRX_API_ID}
+
+#jasypt
+jasypt.encryptor.bean=jasyptEncryptorAES
