--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,9 +27,24 @@ jobs:
     
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew 
+
+    - name: Set environment variables
+      env:
+        JASYPTKEY: ${{ secrets.JASYPTKEY }}
+        ALLEN_API_ID: ${{ secrets.ALLEN_API_ID }}
+        KRX_API_ID: ${{ secrets.KRX_API_ID }}
+        NAVER_API_ID: ${{ secrets.NAVER_API_ID }}
+        NAVER_API_SECRET: ${{ secrets.NAVER_API_SECRET }}
+      run: echo "Environment variables configured."
       
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+      env:
+        JASYPTKEY: ${{ secrets.JASYPTKEY }}
+        ALLEN_API_ID: ${{ secrets.ALLEN_API_ID }}
+        KRX_API_ID: ${{ secrets.KRX_API_ID }}
+        NAVER_API_ID: ${{ secrets.NAVER_API_ID }}
+        NAVER_API_SECRET: ${{ secrets.NAVER_API_SECRET }}
 
   dependency-submission:
 
