--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,6 +3,8 @@ name: Java CI with Gradle
 env:
   S3_BUCKET_NAME: astronaut-bucket
   AWS_REGION: ap-northeast-2
+  CODEDEPLOY_NAME: github-actions
+  CODEDEPLOY_GROUP: astronaut-github-actions-group
 
 on:
   push:
@@ -63,6 +65,9 @@ jobs:
     
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name $CODEDEPLOY_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODEDEPLOY_GROUP --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$GITHUB_SHA.zip
 
   dependency-submission:
 
