--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ krx.client.id=${KRX_API_ID}
 
 #jasypt
 jasypt.encryptor.bean=jasyptEncryptorAES
-jasypt.encryptor.password=${JASYPTKEY}
+jasypt.encryptor.key=${JASYPTKEY}
