--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -60,14 +60,25 @@ jobs:
 
     - name: Create .env file
       run: |
-          echo ALLEN_API_ID: ${{ secrets.ALLEN_API_ID }} >> .env
-          echo KRX_API_ID: ${{ secrets.KRX_API_ID }} >> .env
-          echo NAVER_API_ID: ${{ secrets.NAVER_API_ID }} >> .env
-          echo NAVER_API_SECRET: ${{ secrets.NAVER_API_SECRET }} >> .env
+          echo "ALLEN_API_ID=${{ secrets.ALLEN_API_ID }}" >> .env
+          echo "KRX_API_ID=${{ secrets.KRX_API_ID }}" >> .env
+          echo "NAVER_API_ID=${{ secrets.NAVER_API_ID }}" >> .env
+          echo "NAVER_API_SECRET=${{ secrets.NAVER_API_SECRET }}" >> .env
           echo "DB_URL=${{ secrets.DB_URL }}" >> .env
           echo "DB_USER_NAME=${{ secrets.DB_USER_NAME }}" >> .env
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "Environment variables saved to .env file."
+
+    - name: Create SSH key file
+      run: echo "${{ secrets.EC2_SSH_KEY }}" > ssh_key.pem
+    
+    - name: Set SSH key permissions
+      run: chmod 600 ssh_key.pem
+
+    - name: Add EC2 host key to known_hosts
+      run: ssh-keyscan -H ${{ secrets.EC2_INSTANCE }} >> ~/.ssh/known_hosts
+    
+    - name: Copy .env file to EC2
+      run: scp -i ssh_key.pem .env ${{ secrets.EC2_INSTANCE }}:/home/ec2-user/action/
 
     - name: Make zip file
       run: zip -r ./$GITHUB_SHA.zip .
