--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,6 +1,6 @@
 # Naver API
-naver.client.id=7_O2KDmE_mXqlI2UJdc3
-naver.client.secret=cuiXfIAvbf
+naver.client.id=Kp7u4dEPh5Z_ExVSw8SC
+naver.client.secret=TgAZlRA4l7
 
 # Alan AI API
 alan.client.id=be3a0bc1-0777-4889-a575-324b559475e2
@@ -10,8 +10,7 @@ NAVER_API_ID=Kp7u4dEPh5Z_ExVSw8SC
 NAVER_API_SECRET=TgAZlRA4l7
 
 ## Allen API ??
-#ALLEN_API_ID=c9843729-7a98-402d-aad6-4f8b9208b662
-ALLEN_API_ID=be3a0bc1-0777-4889-a575-324b559475e2
+ALLEN_API_ID=80f9adc9-8701-4012-ad62-222945369a05
 
 ## KRX API ??
 KRX_API_ID=96A6FED064FB4C88BBA39207924C43321E95CF79
